--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,11 @@
-On a webpage, use a javascript list of strings (use animal names) and javascript code to generate an HTML list with those strings present.
-Start with a webpage that has an HTML list of strings and a button. When the button is pressed, use javascript to reset all of those values to the length of the strings. I.e. if the list item was dog, replace it with 3. Hint: Look into getElementsByTagName to retrieve elements.
-Start with a webpage that has an HTML list of strings and a button. When the button is pressed, use javascript to add the word Big in from of the string. I.e. if the list item was dog, replace it with big dog.
+1. On a webpage, use a javascript list of strings (use animal names) 
+    and javascript code to generate an HTML list with those strings present.
+
+2. Start with a webpage that has an HTML list of strings and a button. When 
+    the button is pressed, use javascript to reset all of those values to the 
+    length of the strings. I.e. if the list item was dog, replace it with 3. 
+    Hint: Look into getElementsByTagName to retrieve elements.
+
+3. Start with a webpage that has an HTML list of strings and a button. 
+    When the button is pressed, use javascript to add the word Big in from of 
+    the string. I.e. if the list item was dog, replace it with big dog.
