--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<a href="url">Number</a>
+<a href="number.html">Number</a>
 <a href="url">Big</a>
 
 <script src="script.js"></script>
